Add more questions (from Claude)

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
     "version": "1.0",
     "files": [
-        "questions.json"
+        "questions.json",
+        "claude_questions_1.json"
     ]
 }
