--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
         "claude_questions_1.json",
         "claude_questions_2.json",
         "gemini_questions_1.json",
+        "gemini_questions_2.json",
         "gpt-5_questions_1.json"
     ]
 }
