Add more questions (from Gemini)

--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
         "composer_questions_1.json",
         "gemini_questions_1.json",
         "gemini_questions_2.json",
+        "gemini_questions_3.json",
         "gpt-4.1_questions.json",
         "gpt-5_questions.json",
         "gpt-5.2_questions.json"
