Add more questions (from Gemini)

--- a/manifest.json
+++ b/manifest.json
@@ -4,14 +4,14 @@
         "claude_questions_1.json",
         "claude_questions_2.json",
         "claude_questions_3.json",
-        "claude_questions_4.json",
-        "claude_questions_5.json",
         "composer_questions_1.json",
         "gemini_questions_1.json",
         "gemini_questions_2.json",
         "gemini_questions_3.json",
         "gemini_questions_4.json",
         "gemini_questions_5.json",
+        "gemini_questions_6.json",
+        "gemini_questions_7.json",
         "gpt-4.1_questions.json",
         "gpt-5_questions.json",
         "gpt-5.2_questions.json"
