--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,10 @@
         "claude_questions_1.json",
         "claude_questions_2.json",
         "claude_questions_3.json",
+        "claude_questions_4.json",
+        "claude_questions_5.json",
+        "claude_questions_6.json",
+        "claude_questions_7.json",
         "composer_questions_1.json",
         "gemini_questions_1.json",
         "gemini_questions_2.json",
