--- a/manifest.json
+++ b/manifest.json
@@ -18,9 +18,12 @@
         "gemini_questions_7.json",
         "gemini_questions_8.json",
         "gemini_questions_9.json",
+        "gemini_questions_10.json",
+        "gemini_questions_11.json",
         "gpt-4.1_questions.json",
         "gpt-5_questions.json",
         "gpt-5.2_questions.json",
-        "gpt-5-mini_questions.json"
+        "gpt-5-mini_questions.json",
+        "raptor-mini_questions.json"
     ]
 }
