Added questions (Gemini)

--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,8 @@
         "gemini_questions_9.json",
         "gemini_questions_10.json",
         "gemini_questions_11.json",
+        "gemini_questions_12.json",
+        "gemini_questions_13.json",
         "gpt-4.1_questions.json",
         "gpt-5_questions.json",
         "gpt-5.2_questions.json",
